syntax = "proto3";

package sportgrpc;

service Controller {
    rpc ReadData(DataRequest) returns (stream SportData) {}
    rpc SetLoad(LoadRequest) returns (LoadResponse) {}
}

message DataRequest {

}

message LoadRequest {
    string device_id = 1;
    int32 target_load = 2;
}

message LoadResponse {

}

message SportData {
    string device_id = 1;
    ControlData control_data = 2;
    PerformanceData performance_data = 3;
}

enum Button {
    BUTTON_RESET = 0;
    BUTTON_F1 = 1;
    BUTTON_F2 = 2;
    BUTTON_F3 = 3;
    BUTTON_PLUS = 4;
    BUTTON_MINUS = 5;
}

message ControlData {
    repeated Button pressed = 1;
}

enum PerformanceType {
    PERFORMANCE_TYPE_SPEED = 0;
    PERFORMANCE_TYPE_POWER = 1;
    PERFORMANCE_TYPE_CADENCE = 2;
    PERFORMANCE_TYPE_HEART_RATE = 3;
    PERFORMANCE_TYPE_CALIBRATION = 4;
}

message PerformanceData {
    PerformanceType type = 1;
    double value = 2;
}
